# uvscripts

./: README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
1a/9c496e33c9/: metadata.json
1a/9c496e33c9/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
72/5d71eb878c/: metadata.json
72/5d71eb878c/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
dc/6530604649/: metadata.json
dc/6530604649/2/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
src/uv_script/: __init__.py  __main__.py  cli.py  config.py  runner.py
src/uvscripts/: __init__.py  __main__.py  cli.py  runner.py
tests/: test_cli.py  test_config.py  test_runner.py
