[project]
name = "uvscripts"
version = "0.1.4"
description = "A lightweight script runner for uv — define and run project scripts from pyproject.toml"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Felix Simkovic", email = "felixsimkovic@me.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
uvs = "uvscripts.cli:main"

[build-system]
requires = ["uv_build>=0.8.7,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
    "ty>=0.0.15",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.uvs.scripts]
test = "pytest tests/ -v"
lint = "ruff check src/"
format = "ruff format src/"
typecheck = "ty check src/"
check = ["lint", "typecheck", "test"]
